Great seal + other assets

--- a/manuscript/page-3/body.html
+++ b/manuscript/page-3/body.html
@@ -1,6 +1,1 @@
-<div class="leaf flex ">
-    <div class="inner center">
-        <a class="github" href="https://github.com/marvindanig/the-united-states-constitution"><i class="fa fa-github large"> </i> </a>
-        <p> Fork the book on <a class="github" href="https://github.com/marvindanig/the-united-states-constitution"> Github</a>. </p>
-    </div>
-</div>
+<div class="leaf flex"><div class="inner justify center"><blockquote><em>E pluribus unum</em></blockquote></div> </div>
