--- a/interim/sanitized.html
+++ b/interim/sanitized.html
@@ -1,6 +1,7 @@
-<body><h1>THE CONSTITUTION OF THE UNITED STATES OF AMERICA, 1787</h1>
+<body>
+    <h1>THE CONSTITUTION OF THE UNITED STATES OF AMERICA, 1787</h1>
 <p>We the people of the United States, in Order to form a more perfect Union, establish Justice, insure domestic Tranquility, provide for the common defence, promote the general Welfare, and secure the Blessings of Liberty to ourselves and our Posterity, do ordain and establish this Constitution for the United States of America.</p>
-<h1>Article I</h1>
+<h2>Article I</h2>
 <p><b>Section 1</b>. All legislative Powers herein granted shall be vested in a Congress of the United States, which shall consist of a Senate and House of Representatives.</p>
 <p><b>Section 2</b>. The House of Representatives shall be composed of Members chosen every second Year by the People of the several States, and the electors in each State shall have the qualifications requisite for electors of the most numerous branch of the State legislature.</p>
 <p>No Person shall be a Representative who shall not have attained to the Age of twenty five Years, and been seven Years a citizen of the United States, and who shall not, when elected, be an Inhabitant of that State in which he shall be chosen.</p>
@@ -91,6 +92,7 @@
 <p>The Senators and Representatives before mentioned, and the Members of the several State Legislatures, and all executive and judicial Officers, both of the United States and of the several States, shall be bound by Oath or Affirmation, to support this Constitution; but no religious Test shall ever be required as a Qualification to any Office or public Trust under the United States.</p>
 <h2>ARTICLE VII</h2>
 <p>The Ratification of the Conventions of nine States, shall be sufficient for the Establishment of this Constitution between the States so ratifying the Same.</p>
+<h3> Witness </h3>
 <p>Done in Convention by the Unanimous Consent of the States present the Seventeenth Day of September in the Year of our Lord one thousand seven hundred and eighty seven and of the Independence of the United States of America the Twelfth. In Witness whereof We have hereunto subscribed our Names,</p>
 <p>Go. WASHINGTON&amp;mdash; Presid. and deputy from Virginia</p>
 <p>New Hampshire</p>
