--- a/manuscript/page-33/body.html
+++ b/manuscript/page-33/body.html
@@ -1,1 +1,1 @@
-<div class="leaf flex"><div class="inner justify"><p>Section 4. The President, Vice President and all civil Officers of the United States, shall be removed from Office on Impeachment for, and Conviction of, Treason, Bribery, or other high Crimes and Misdemeanors.</p></div> </div>
+<div class="leaf flex"><div class="inner justify"><h2>ARTICLE III</h2></div> </div>
