--- a/manuscript/page-4/body.html
+++ b/manuscript/page-4/body.html
@@ -1,6 +1,1 @@
-<div class="leaf flex">
-    <div class="inner center ">
-        <a href="http://bookiza.io"><img src="https://bookiza.github.io/docs/images/logo.png" width="50%" /></a>
-        <p>Baked with <a href="http://bookiza.io">Bookiza</a>! </p>
-    </div>
-</div>
+<div class="leaf flex"><div class="inner justify"><h1>THE CONSTITUTION </h1> <p class="center"> of </p> <h2> THE UNITED STATES OF AMERICA</h2> <h3>1787</h3></div> </div>
