--- a/manuscript/page-46/body.html
+++ b/manuscript/page-46/body.html
@@ -1,1 +1,1 @@
-<div class="leaf flex"><div class="inner justify"><h2>ARTICLE VII</h2></div> </div>
+<div class="leaf flex"><div class="inner justify"><p>The Ratification of the Conventions of nine States, shall be sufficient for the Establishment of this Constitution between the States so ratifying the Same.</p></div> </div>
