--- a/manuscript/page-5/body.html
+++ b/manuscript/page-5/body.html
@@ -1,1 +1,5 @@
-<div class="leaf flex"><div class="inner justify"><h1>THE CONSTITUTION OF THE UNITED STATES OF AMERICA, 1787</h1></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <blockquote><em> <strong>We the people</strong> of the United States, in Order to form a more perfect Union, establish Justice, insure domestic Tranquility, provide for the common defence, promote the general Welfare, and secure the Blessings of Liberty to ourselves and our Posterity, do ordain and establish this Constitution for the United States of America. </em></blockquote>
+    </div>
+</div>
