--- a/manuscript/page-3/body.html
+++ b/manuscript/page-3/body.html
@@ -1,1 +1,1 @@
-<div class="leaf flex"><div class="inner justify center"><blockquote><em>E pluribus unum</em></blockquote></div> </div>
+<div class="leaf flex"><div class="inner justify center"><img class="overlay" src="https://raw.githubusercontent.com/marvindanig/the-united-states-constitution/master/assets/images/great-seal.png" width="60%"/></div> </div>
