Fixing the constitution format correctly, removed bugs of scroll design.

--- a/manuscript/page-16/body.html
+++ b/manuscript/page-16/body.html
@@ -1,1 +1,10 @@
-<div class="leaf flex"><div class="inner justify"><p>Every Order, Resolution, or Vote to which the Concurrence of the Senate and House of Representatives may be necessary (except on a question of Adjournment) shall be presented to the President of the United States; and before the Same shall take Effect, shall be approved by him, or being disapproved by him, shall be repassed by two thirds of the Senate and House of Representatives, according to the Rules and Limitations prescribed in the Case of a Bill.</p><p>Section 8. The Congress shall have Power to lay and collect Taxes, Duties, Imposts and Excises, to pay the Debts and provide for the common Defence and general Welfare of the United States; but all Duties, Imposts and Excises shall be uniform throughout the United States;</p></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <p>Effect, shall be approved by him, or being disapproved by him, shall be repassed by two thirds of the Senate and House of Representatives, according to the Rules and Limitations prescribed in the Case of a Bill.</p>
+        <h4>Section 8.</h4>
+        <p> The Congress shall have Power to lay and collect Taxes, Duties, Imposts and Excises, to pay the Debts and provide for the common Defence and general Welfare of the United States; but all Duties, Imposts and Excises shall be uniform throughout the United States;</p>
+        <p>To borrow Money on the credit of the United States;</p>
+        <p>To regulate Commerce with foreign Nations, and among the several States, and with the Indian Tribes;</p>
+        <p>To establish an uniform Rule of Naturalization, and uniform Laws on the subject of Bankruptcies throughout the United States;</p>
+    </div>
+</div>
