--- a/manuscript/page-3/body.html
+++ b/manuscript/page-3/body.html
@@ -1,1 +1,1 @@
-<div class="leaf flex"><div class="inner justify center"><img class="overlay" src="https://raw.githubusercontent.com/marvindanig/the-united-states-constitution/master/assets/images/great-seal.png" width="60%"/></div> </div>
+<div class="leaf flex"><div class="inner justify"><h1>THE CONSTITUTION </h1> <p class="center"> of </p> <h2> THE UNITED STATES OF AMERICA</h2> <h3>1787</h3></div> </div>
