--- a/manuscript/page-47/body.html
+++ b/manuscript/page-47/body.html
@@ -1,1 +1,31 @@
-<div class="leaf flex"><div class="inner justify"><h3> Witness </h3></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <div class="signature">
+            <h5>Connecticut</h5>
+            <h6>Wm. Saml. Johnson </h6>
+            <h6> Roger Sherman</h6>
+        </div>
+        <div class="signature">
+            <h5>New York</h5>
+            <h6> Alexander Hamilton</h6>
+        </div>
+        <div class="signature">
+            <h5>New Jersey</h5>
+            <h6>Wil: Livingston </h6>
+            <h6>David Brearley</h6>
+            <h6>Wm. Paterson</h6>
+            <h6>Jona: Dayton</h6>
+        </div>
+        <div class="signature">
+            <h5>Pennsylvania</h5>
+            <h6>B Franklin</h6>
+            <h6>Thomas Mifflin</h6>
+            <h6>Robt Morris</h6>
+            <h6>Geo. Clymer</h6>
+            <h6>Thos FitzSimons</h6>
+            <h6>Jared Ingersoll</h6>
+            <h6>James Wilson</h6>
+            <h6>Gouv Morris</h6>
+        </div>
+    </div>
+</div>
