--- a/manuscript/page-48/body.html
+++ b/manuscript/page-48/body.html
@@ -1,1 +1,30 @@
-<div class="leaf flex"><div class="inner justify"><p>Done in Convention by the Unanimous Consent of the States present the Seventeenth Day of September in the Year of our Lord one thousand seven hundred and eighty seven and of the Independence of the United States of America the Twelfth. In Witness whereof We have hereunto subscribed our Names,</p><p>Go. WASHINGTON&mdash; Presid. and deputy from Virginia</p><p>New Hampshire</p><p>John Langdon Nicholas Gilman</p><p>Massachusetts</p><p>Nathaniel Gorham Rufus King</p><p>Connecticut</p><p>Wm. Saml. Johnson Roger Sherman</p></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <div class="signature">
+            <h5>Delaware</h5>
+            <h6>Geo: Read </h6>
+            <h6>Gunning Bedford jun</h6>
+            <h6>John Dickinson</h6>
+            <h6>Richard Bassett</h6>
+            <h6> Jaco: Broom </h6>
+        </div>
+        <div class="signature">
+            <h5>Maryland</h5>
+            <h6>James Mchenry</h6>
+            <h6>Dan of St Thos. Jenifer</h6>
+            <h6>Danl Carroll</h6>
+        </div>
+        <div class="signature">
+            <h5>Virginia</h5>
+            <h6>John Blair&mdash; </h6>
+            <h6> James Madison Jr.</h6>
+        </div>
+        <div class="signature">
+            <h5>North Carolina</h5>
+            <h6>Wm. Blount  </h6>
+            <h6>Rich'd Dobbs Spaight</h6>
+            <h6> Hu Williamson</h6>
+        </div>
+
+    </div>
+</div>
