--- a/manuscript/page-17/body.html
+++ b/manuscript/page-17/body.html
@@ -1,1 +1,12 @@
-<div class="leaf flex"><div class="inner justify"><p>To borrow Money on the credit of the United States;</p><p>To regulate Commerce with foreign Nations, and among the several States, and with the Indian Tribes;</p><p>To establish an uniform Rule of Naturalization, and uniform Laws on the subject of Bankruptcies throughout the United States;</p><p>To coin Money, regulate the Value thereof, and of foreign Coin, and fix the Standard of Weights and Measures;</p><p>To provide for the Punishment of counterfeiting the Securities and current Coin of the United States;</p><p>To establish Post Offices and Post Roads;</p><p>To promote the Progress of Science and useful Arts, by securing for limited Times to Authors and Inventors the exclusive Right to their respective Writings and Discoveries;</p></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <p>To coin Money, regulate the Value thereof, and of foreign Coin, and fix the Standard of Weights and Measures;</p>
+        <p>To provide for the Punishment of counterfeiting the Securities and current Coin of the United States;</p>
+        <p>To establish Post Offices and Post Roads;</p>
+        <p>To promote the Progress of Science and useful Arts, by securing for limited Times to Authors and Inventors the exclusive Right to their respective Writings and Discoveries;</p>
+        <p>To constitute Tribunals inferior to the supreme Court;</p>
+        <p>To define and punish Piracies and Felonies committed on the high Seas, and Offenses against the Law of Nations;</p>
+        <p>To declare War, grant Letters of Marque and Reprisal, and make Rules concerning Captures on Land and Water;</p>
+
+    </div>
+</div>
