--- a/manuscript/page-18/body.html
+++ b/manuscript/page-18/body.html
@@ -1,1 +1,9 @@
-<div class="leaf flex"><div class="inner justify"><p>To constitute Tribunals inferior to the supreme Court;</p><p>To define and punish Piracies and Felonies committed on the high Seas, and Offenses against the Law of Nations;</p><p>To declare War, grant Letters of Marque and Reprisal, and make Rules concerning Captures on Land and Water;</p><p>To raise and support Armies, but no Appropriation of Money to that Use shall be for a longer term than two Years;</p><p>To provide and maintain a Navy;</p><p>To make Rules for the Government and Regulation of the land and naval Forces;</p></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <p>To raise and support Armies, but no Appropriation of Money to that Use shall be for a longer term than two Years;</p>
+        <p>To provide and maintain a Navy;</p>
+        <p>To make Rules for the Government and Regulation of the land and naval Forces;</p>
+        <p>To provide for calling forth the Militia to execute the Laws of the Union, suppress Insurrections and repel Invasions;</p>
+        <p>To provide for organizing, arming, and disciplining, the Militia, and for governing such Part of them as may be employed in the Service of the United States, reserving to the States respectively, the Appointment of the Officers, and the Authority of training the militia according to the discipline prescribed by Congress;</p>
+    </div>
+</div>
