--- a/manuscript/page-2/body.html
+++ b/manuscript/page-2/body.html
@@ -1,6 +1,6 @@
 <div class="leaf flex">
-    <div class="inner center">
-        <div id="instruct" class=" touchDragAnimation"></div>
-        <p> Gentle swipe </p>
+    <div class="inner justify center"><img class="overlay" src="https://raw.githubusercontent.com/marvindanig/the-united-states-constitution/master/assets/images/great-seal.png" width="60%" />
+        <blockquote><em> E PLURIBUS ENUM </em></blockquote>
     </div>
 </div>
+
