--- a/manuscript/page-20/body.html
+++ b/manuscript/page-20/body.html
@@ -1,1 +1,9 @@
-<div class="leaf flex"><div class="inner justify"><p>To make all Laws which shall be necessary and proper for carrying into Execution the foregoing Powers, and all other Powers vested by this Constitution in the Government of the United States, or in any Department or Officer thereof.</p><p>Section 9. The Migration or Importation of such Persons as any of the States now existing shall think proper to admit, shall not be prohibited by the Congress prior to the Year one thousand eight hundred and eight, but a Tax or Duty may be imposed on such Importation, not exceeding ten dollars for each Person.</p><p>The Privilege of the Writ of Habeas Corpus shall not be suspended, unless when in Cases of Rebellion or Invasion the public Safety may require it.</p></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <p> <h4>Section 9. </h4> The Migration or Importation of such Persons as any of the States now existing shall think proper to admit, shall not be prohibited by the Congress prior to the Year one thousand eight hundred and eight, but a Tax or Duty may be imposed on such Importation, not exceeding ten dollars for each Person.</p>
+        <p>The Privilege of the Writ of Habeas Corpus shall not be suspended, unless when in Cases of Rebellion or Invasion the public Safety may require it.</p>
+        <p>No Bill of Attainder or ex post facto Law shall be passed.</p>
+        <p>No Capitation, or other direct, Tax shall be laid, unless in Proportion to the Census or Enumeration herein before directed to be taken.</p>
+
+    </div>
+</div>
