--- a/manuscript/page-21/body.html
+++ b/manuscript/page-21/body.html
@@ -1,1 +1,8 @@
-<div class="leaf flex"><div class="inner justify"><p>No Bill of Attainder or ex post facto Law shall be passed.</p><p>No Capitation, or other direct, Tax shall be laid, unless in Proportion to the Census or Enumeration herein before directed to be taken.</p><p>No Tax or Duty shall be laid on Articles exported from any State.</p><p>No Preference shall be given by any Regulation of Commerce or Revenue to the Ports of one State over those of another: nor shall Vessels bound to, or from, one State, be obliged to enter, clear, or pay Duties in another.</p><p>No Money shall be drawn from the Treasury, but in Consequence of Appropriations made by Law; and a regular Statement and Account of the Receipts and Expenditures of all public Money shall be published from time to time.</p></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <p>No Tax or Duty shall be laid on Articles exported from any State.</p>
+        <p>No Preference shall be given by any Regulation of Commerce or Revenue to the Ports of one State over those of another: nor shall Vessels bound to, or from, one State, be obliged to enter, clear, or pay Duties in another.</p>
+        <p>No Money shall be drawn from the Treasury, but in Consequence of Appropriations made by Law; and a regular Statement and Account of the Receipts and Expenditures of all public Money shall be published from time to time.</p>
+        <p>No Title of Nobility shall be granted by the United States; and no Person holding any Office of Profit or Trust under them, shall, without the Consent of the Congress, accept of any present, Emolument, Office, or Title, of any kind whatever, from any King, Prince, or foreign State.</p>
+    </div>
+</div>
