--- a/manuscript/page-46/body.html
+++ b/manuscript/page-46/body.html
@@ -1,1 +1,17 @@
-<div class="leaf flex"><div class="inner justify"><p>The Ratification of the Conventions of nine States, shall be sufficient for the Establishment of this Constitution between the States so ratifying the Same.</p></div> </div>
+<div class="leaf flex">
+    <div class="inner justify">
+        <p>The Ratification of the Conventions of nine States, shall be sufficient for the Establishment of this Constitution between the States so ratifying the Same.</p>
+        <h4> Witness: </h4>
+        <p>Done in Convention by the Unanimous Consent of the States present the Seventeenth Day of September in the Year of our Lord one thousand seven hundred and eighty seven and of the Independence of the United States of America the Twelfth. In Witness whereof We have hereunto subscribed our Names,</p>
+        <p>Go. WASHINGTON&mdash; Presid. and deputy from Virginia,</p>
+        <div class="signature">
+            <h5>New Hampshire</h5>
+            <h6>John Langdon</h6>
+            <h6> Nicholas Gilman</h6>
+        </div>
+        <div class="signature">
+            <h5>Massachusetts</h5>
+            <h6>Nathaniel Gorham </h6>
+            <h6> Rufus King</h6>
+        </div>
+    </div>
