--- a/manuscript/page-49/body.html
+++ b/manuscript/page-49/body.html
@@ -1,1 +1,19 @@
-<div class="leaf flex"><div class="inner justify"><p>New York</p><p>Alexander Hamilton</p><p>New Jersey</p><p>Wil: Livingston David Brearley Wm. Paterson Jona: Dayton</p><p>Pennsylvania</p><p>B Franklin Thomas Mifflin Robt Morris Geo. Clymer Thos FitzSimons Jared Ingersoll James Wilson Gouv Morris</p><p>Delaware</p><p>Geo: Read Gunning Bedford jun John Dickinson Richard Bassett Jaco: Broom</p><p>Maryland</p><p>James Mchenry Dan of St Thos. Jenifer Danl Carroll</p><p>Virginia</p><p>John Blair&mdash; James Madison Jr.</p></div> </div>
+<div class="leaf ">
+    <div class="inner justify">
+        <div class="signature">
+            <h5>South Carolina</h5>
+            <h6>J. Rutledge</h6>
+            <h6>Charles Cotesworth Pinckney </h6>
+            <h6> Charles Pinckney</h6>
+            <h6>Pierce Butler</h6>
+        </div>
+        <div class="signature">
+            <h5>Georgia</h5>
+            <h6>William Few</h6>
+            <h6>Abr Baldwin</h6>
+        </div>
+        <div class="attest">
+            <p>Attest: William Jackson, Secretary</p>
+        </div>
+    </div>
+</div>
