--- a/manuscript/page-52/body.html
+++ b/manuscript/page-52/body.html
@@ -1,5 +1,6 @@
-<div class="title leaf flex">
-    <div class="inner justify flex">
-        <h1 id="end">The End</h1>
+<div class="leaf flex">
+    <div class="inner justify">
+        <p> <strong> IV. </strong> The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by oath or affirmation, and particularly describing the place to be searched, and the persons or things to be seized. </p>
+        <p> <strong> V. </strong> No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offense to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use without just compensation. </p>
     </div>
 </div>
